--- a/views/partials/create_category.templ
+++ b/views/partials/create_category.templ
@@ -90,7 +90,7 @@ templ CreateCategory(categoryList []productdmn.Category) {
 		</form>
 	</div>
 	<span hx-swap-oob="true" id="path-text" class="py-4 text-sm text-gray-500">
-		<a href="/admin/products" hx-target="#main-section" hx-get="/admin/products">Product Section</a>
+		<a href="/admin/products" hx-target="#main-section" hx-get="/admin/products">Product</a>
 		>
 		<a href="/admin/products" hx-swap="outerHTML" hx-target="#create-category-section" hx-get="/admin/categories">Category</a>
 		>
